o Added some simple plot examples to example(loddsratio), anticipating a plot method
o Added data(Fungicide), a 2 x 2 x 2 x 2 table
o Renamed summarize() and related methods to summarise() to avoid conflict with plyr.
o Addition to vcd-tutorial vignette on use of aperm() with table objects
o Updated demo(yamaguchi-xie) to correct row/col nomenclature and add plot of BIC

Version 0.5-1 (2010-09-17)

o Added Yamaguchi87 data (three-way mobility table)
o Added demo(yamaguchi-xie) illustrating fitting and visualization of the models of homogeneous and 
  log multiplicative layer effects fit in Xie (1992, Table 1)
o Added BIC to summarize() and friends
o Added Hauser79 data (two-way mobility table), plus some examples from Powers and Xie (2008)
o Added Crossings() to construct interactions for Goodman 1972 crossings model.
o Added datasets() to list datasets in packages
o Extended description and examples of Kway()
o Added meanResiduals() and extended mosaic.glm() (Heather Turner)
o summarize() gets a sortby argument for glmlist and loglmlist objects

Version 0.5-0 (2010-04-28)

o Fleshed out mosaic3d, allowing display of observed or expected, internally calculated or externally
  supplied residuals, specifying the initial 3D shape, etc.  This completes the 'top-level' work on
  mosaic3d(), borrowing code from vcd::strucplot.
o Added initial handling for zero cells in the table to mosaic3d().  
o Added center3d() for finding the mean coordinates of shape3d objects.
o Added demo(mosaic-hec) comparing 2D and 3D mosaics for HairEyeColor data
o Gave mosaic3d a label_edge argument, allowing labels for dimensions at minima or maxima
o Made mosaic3d object oriented, giving it a loglm method
o Added Kway(), fitting all 0-way, 1-way, 2-way, ... k-way models in a glm

Version 0.4-3 (2010-03-25)

o Added demo(mosaic3d-demo), a proof-of-concept for doing 3D mosaic displays
o Added mosaic3d(), an initial basic version.
o Factored out split3d() and gave it S3 methods
